--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <div>
     <a href="./index.html">Home</a>
     <a href="./Portfolio-Code/project.html">Project</a>
-    <a href="./Portfolio-Code/contact us .html us .html">Contact Us</a>
+    <a href="./Portfolio-Code/contact-us .html us .html">Contact Us</a>
     <a href="./Portfolio-Code/Sign-up.html">Sign In</a>
    </div>
         <hr>
