--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
    <div>
     <a href="./index.html">Home</a>
     <a href="./Portfolio-Code/project.html">Project</a>
-    <a href="./Portfolio-Code/contact-us .html us .html">Contact Us</a>
+    <a href="./Portfolio-Code/contact-us .html">Contact Us</a>
     <a href="./Portfolio-Code/Sign-up.html">Sign In</a>
    </div>
         <hr>
 
-   <img src="./picture.jpg" alt="" height="250px">
+   <img src="./Portfolio-Code/picture.jpg" alt="" height="250px">
     <h3>Introduction</h3>
     <p>My name is Haider Rehman student of University of Engineering and  Technology. <br>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit beatae tempore <br>
@@ -35,7 +35,7 @@
         <tr>
             <td>2</td>
             <td>Ford Mustang</td>
-            <td>450k Dollars</td>
+            <td>450k Dollars</td>lmm
         </tr>
     </table>
 
