My website code update

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <tr>
             <td>2</td>
             <td>Ford Mustang</td>
-            <td>450k Dollars</td>lmm
+            <td>450k Dollars</td>
         </tr>
     </table>
 
