--- a/Portfolio-Code/project.html
+++ b/Portfolio-Code/project.html
@@ -24,7 +24,23 @@
 
          <h4>Project 2:</h4>
          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi soluta ipsam ea aliquam voluptas. Aperiam quo ut nemo consequuntur a doloremque placeat nesciunt labore corporis iure dolore commodi, quisquam in molestias itaque fuga dolorum rem nulla autem asperiores soluta. Odit officia nobis saepe? Quaerat natus dolores, neque illo exercitationem qui!</p>
-         
+         <table>
+            <tr>
+                <th>Sr No</th>
+                <th>Car Model</th>
+                <th>Price</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Bugatti</td>
+            <td>12 Millons Dollar</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Ford Mustang</td>
+                <td>450k Dollars</td>
+            </tr>
+        </table>
     </fieldset>
 </body>
 </html>
