--- a/index.html
+++ b/index.html
@@ -5,24 +5,19 @@
     <link rel="stylesheet" href="./Portfolio-Code/Styling.css">
 </head>
 <body>
-<fieldset>
-    
-   <div>
+   <div id="section-break">
+    <h1 >EM</h1>
     <a href="./index.html">Home</a>
-    <a href="./Portfolio-Code/project.html">Project</a>
-    <a href="./Portfolio-Code/contact-us .html">Contact Us</a>
-    <a href="./Portfolio-Code/Sign-up.html">Sign In</a>
+    <a href="./Portfolio-Code/project.html">Projects</a>
+    <a href="./Portfolio-Code/Sign-up.html">Contact Us</a>
+    
    </div>
         <hr>
+        <h3>Introduction</h3>
+    <span>
+        <p>My name is Haider Rehman student of University of Engineering and  Technology. <br></p>    
+            <img src="./Portfolio-Code/my-pic.png" height="300px" width="300px" style="margin-left: 100px;">
+    </span>
 
-   <img src="./Portfolio-Code/picture.jpg" alt="" height="250px">
-    <h3>Introduction</h3>
-    <p>My name is Haider Rehman student of University of Engineering and  Technology. <br>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit beatae tempore <br>
-    numquam alias explicabo. Corrupti minima soluta iste optio temporibus? </p>
-
-   
-
-</fieldset>
 </body>
 </html>
