--- a/Portfolio-Code/Sign-up.html
+++ b/Portfolio-Code/Sign-up.html
@@ -4,8 +4,8 @@
     <title>Sign In</title>
     <link rel="stylesheet" href="./Styling.css">
 </head>
-<body>
-    <fieldset>
+<body >
+    <fieldset style="background-image: url(./backgroundpic56.jpg);background-repeat: no-repeat;background-position: center;background-size: cover;">
     <div id="section-break">
         <h1 >EM</h1>
         <a href="../index.html">Home</a>
@@ -15,15 +15,15 @@
     <form >
         <h2>Event Registration Form </h2>
         <label for="Name">Name:</label>
-        <input type="Name" placeholder="Name" style="margin-left: 40px; height: 0.8cm; border: none; background-color: rgba(218, 216, 214, 0.724);" required> <input type="Last Name" placeholder="Last Name" style="margin-left: 10px; height: 0.8cm; border: none; background-color: rgb(218, 216, 214);" required><br><br>
+        <input type="Name" placeholder="Name" style="margin-left: 40px; height: 0.8cm; border: none; background-color: rgba(218, 216, 214, 0.724);" required> <input type="Last Name" placeholder="Last Name" style="margin-left: 10px; height: 0.8cm; border: none; background-color: rgb(218, 216, 214,0.724);" required><br><br>
         <label for="Company">Company:</label>
-        <input type="Company" placeholder="Company" style="margin-left: 15px; width: 9cm; height: 0.8cm; border: none; background-color: rgba(217, 215, 214, 0.724);" required><br><br>
+        <input type="Company" placeholder="Company" style="margin-left: 15px; width: 9cm; height: 0.8cm; border: none; background-color: rgba(218, 216, 214, 0.724);" required><br><br>
         <label for="Email">Email:</label>
-        <input type="email" placeholder="Email" style="margin-left: 40px; width: 9cm; height: 0.8cm; border: none; background-color: rgb(218, 216, 214, 0.724);" required><br><br>
+        <input type="email" placeholder="Email" style="margin-left: 40px; width: 9cm; height: 0.8cm; border: none; background-color: rgb(218, 216, 216, 0.724);" required><br><br>
         <label for="password"> Password:</label>
         <input type="Password" placeholder="Password" style="margin-left: 20px; width: 9cm; height: 0.8cm; border: none; background-color: rgb(218, 216, 214,0.724);" required><br><br>
         <label for="Phone">Phone:</label>
-        <select  style="margin-left: 40px; width:1.5cm; height: 0.9cm; border: none; background-color: rgb(218, 216, 214);" required>
+        <select  style="margin-left: 40px; width:1.5cm; height: 0.9cm; border: none; background-color: rgb(218, 216, 214,0.724);" required>
             <option></option>
             <option>+92</option>
             <option>+1</option>
@@ -33,9 +33,9 @@
             <option>+44</option>
             <option>+92</option>
         </select>
-        <input type="tel" placeholder="Phone Number" maxlength="10" style="width: 7.5cm; height: 0.8cm; border: none; background-color: rgb(218, 216, 214);" required><br><br>
+        <input type="tel" placeholder="Phone Number" maxlength="10" style="width: 7.5cm; height: 0.8cm; border: none; background-color: rgb(218, 216, 214,0.724);" required><br><br>
         <label for="Subject">Subject:</label>
-        <select style="margin-left: 34px; width:9.3cm; height:0.8cm ; border: none; background-color: rgb(218, 216, 214);" required>
+        <select style="margin-left: 34px; width:9.3cm; height:0.8cm ; border: none; background-color: rgb(218, 216, 214,0.724);" required>
             <option  ></option>
             <option >Thermodynamics</option>
             <option >English</option>
